eks/kubernetes/manifest/awscli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awscli-deployment
  namespace: kube-system
  labels:
    app: awscli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awscli
  template:
    metadata:
      labels:
        app: awscli
    spec:
      containers:
      - name: awscli
        image: amazon/aws-cli:latest
        command: ["sleep", "infinity"]
        ports:
        - containerPort: 80
