eks/kubernetes/manifest/dynamic_ebs.yaml
---
# Pod 정의
apiVersion: v1
kind: Pod
metadata:
  name: ebs                        
spec:
  containers:
  - name: ebs                       
    image: centos                   
    command: ["/bin/sh"]             
    args: ["-c", "while true; do echo $(date -u) >> /data/out.txt; sleep 2; done"]
    volumeMounts:
    - name: ebs                      # 볼륨 이름: "ebs"
      mountPath: /data               # 컨테이너 내부에서 /data 경로에 볼륨 마운트
  volumes:
  - name: ebs                        # 볼륨 이름: "ebs"
    persistentVolumeClaim:
      claimName: ebs                 # 연결할 PVC 이름: "ebs"
