eks/kubernetes/manifest/static_ebs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ebs
spec:
  containers:
  - name: ebs
    image: centos
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo $(date -u) >> /data/out.txt; sleep 1; done"]
    volumeMounts:
    - name: ebs
      mountPath: /data
  volumes:
  - name: ebs
    persistentVolumeClaim:
      claimName: ebs-pvc
